--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <body>
         <canvas id="maincanvas"></canvas>
         <button id="generatebutton">Generate</button>
+        <input type="text" id="pixelinput">
         <script src="code.js"></script>
     </body>
 </html>
