--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <canvas id="maincanvas"></canvas>
         <button id="generatebutton">Generate</button>
         <input type="text" id="pixelinput">
+        <input type="text" id="cisinput">
         <script src="code.js"></script>
     </body>
 </html>
