Maybe this will fix the textbox
I don't know for sure

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <body>
         <canvas id="maincanvas"></canvas>
         <button id="generatebutton">Generate</button>
-        <input type="text" id="pixelinput">
-        <input type="text" id="cisinput">
+        <span>
+            <input type="text" id="pixelinput">
+            <input type="text" id="cisinput">
+        </span>
         <script src="code.js"></script>
     </body>
 </html>
