--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
             body{
                 background:black;
             }
+            #cisinput {
+                width: 24%;
+            }
+            #pixelinput {
+                width: 4%;
+            }
         </style>
     </head>
     <body>
